module3-nginx-ingress/lab2-hello-world-nginx/01-deployment-hello-world.yaml
# Lab 3.2 - f5-hello-world app (same as prior modules)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f5-hello-world-web
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: f5-hello-world-web
  template:
    metadata:
      labels:
        app: f5-hello-world-web
    spec:
      containers:
        - name: f5-hello-world-web
          image: f5devcentral/f5-hello-world:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
